--- a/pages/styles.css
+++ b/pages/styles.css
@@ -34,7 +34,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border: 2px solid yellow;
 }
 
 .inner-container{
@@ -44,6 +43,25 @@
     align-items: center;
     margin: 0 20px;
     border: 2px solid red;
+}
+
+.button{
+    background-color: var(--button-bgcolor);
+    box-shadow: 2px 2px 8px #0C0C0C;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 10px;
+    border: none;
+    border-radius: 25px;
+    padding:10px 20px;
+}
+
+.triangle {
+    border-right: 100vw solid transparent;
+    border-bottom: 50px solid white;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 
 h1, h2, h3{
@@ -72,9 +90,6 @@ a{
 header{
     background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
     color: #FFF;
-}
-
-.positie-rel{
     position: relative;
 }
 
@@ -108,36 +123,12 @@ nav li a{
     margin-bottom: 150px;
 }
 
-.top-button{
-    background-color: var(--button-bgcolor);
-    box-shadow: 2px 2px 8px #0C0C0C;
-    color: #FFF;
-    text-transform: uppercase;
-    font-size: 11px;
-    border: none;
-    border-radius: 25px;
-    padding:10px 20px;
-}
-
 .drawing {
     width: 40px;
     position: absolute;
     bottom: 0;
     left:calc(50% - 20px);
 }
-
-/*.inner-container::before{*/
-/*    width: 0;*/
-/*    height: 0;*/
-/*    border-top: 50px solid black;*/
-/*    border-right: 50px solid transparent;*/
-/*    border-left: 50px solid transparent;*/
-
-/*    !*position: absolute;*!*/
-/*    !*bottom: 0;*!*/
-/*    !*left: 25px;*!*/
-/*    !*!*z-index: -14;*!*!*/
-/*}*/
 
 /* --------------- 3.2 Introduction ------------------- */
 
@@ -148,16 +139,15 @@ main{
 }
 
 .introduction{
-    padding: 0 50px;
+    width: 100%;
+    background-color: #FFF;
     color: var(--main-bgcolor);
 }
 
 .introduction-text{
-    display: flex;
-    flex-direction: column;
     text-align: center;
     max-width: 600px;
-    margin: 50px;
+    margin: 50px 0;
     border: 2px solid black;
 }
 
@@ -165,7 +155,7 @@ main{
     display: block;
     font-size: 14px;
     font-weight: bold;
-    padding: 30px 0 0;
+    padding: 50px 0 0;
     color: var(--stan-text);
 }
 
@@ -195,9 +185,7 @@ main{
     flex-grow: 1;
     font-size: 14px;
     font-weight: bold;
-    /*min-height: 150px;*/
-    /*column-gap: 50px;*/
-    margin: 0 50px;
+    margin: 50px;
     border: 2px solid black;
 }
 
@@ -233,8 +221,6 @@ main{
 
 }
 
-
-
 .article-blok{
     display: flex;
     flex-direction: column;
@@ -246,7 +232,8 @@ main{
     box-shadow: 2px 5px 15px var(--servicetegel);
     gap: 10px;
     padding: 30px;
-    flex-basis: 300px;
+    flex-basis: 280px;
+    height: 280px;
     flex-grow: 0;
     flex-shrink: 1;
 
@@ -261,14 +248,23 @@ main{
 #form-area{
     background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
     width: 100%;
-    padding: 50px 0;
+    position: relative;
+}
+
+.bottom-driehoek {
+    border-left: 100vw solid transparent;
+    border-top: 50px solid white;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .text-form-pair{
-    max-width: 600px;
+    /*max-width: 600px;*/
     color: #FFF;
     text-align: center;
-    border: 2px solid greenyellow;
+    margin: 50px 0;
+    /*border: 2px solid greenyellow;*/
 }
 
 .text-form-pair p{
@@ -277,11 +273,39 @@ main{
 }
 
 form{
-    width: 100%;
+    /*flex-basis: 600px;*/
     display: flex;
+    /*flex-grow: 1;*/
     flex-direction: column;
-    align-content: flex-start;
+
+    /*align-content: flex-start;*/
 }
+
+label{
+    font-size: 11px;
+    text-align: left;
+    padding-bottom: 3px;
+}
+
+.inputbalk{
+    margin-bottom: 15px;
+    max-width: 600px;
+    border-radius: 3px;
+    border-style: none;
+}
+
+.inputbalk::placeholder{
+    font-size: 11px;
+    padding: 10px;
+}
+
+.bottom-button{
+    max-width: 100px;
+    justify-content: center;
+}
+
+
+
 
 /* --------------- 3.6 Footer ------------------- */
 
@@ -308,11 +332,12 @@ footer p{
 /* --------------- 4.2 Introduction area ------------------------- */
 /* --------------- 4.3 Image area ------------------------- */
 /* --------------- 4.4 Service area ------------------------- */
-@media screen and (min-width: 1350px){
+@media screen and (min-width: 1200px){
     .serviceblok {
-        padding: 0 150px;
+        padding: 0 100px;
     }
 }
+
 /* --------------- 4.5 Form area ------------------------- */
 /* --------------- 4.6 Footer ------------------------- */
 
